[package]
name = "clipboard-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
egui = "0.28"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
base64 = "0.22"
clipboard = "0.5"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
# Additional macOS-specific dependencies if needed

[[bin]]
name = "clipboard-server"
path = "src/server.rs"

[[bin]]
name = "clipboard-client"
path = "src/client.rs"
